fix jump header fixed

--- a/web/src/scss/main.scss
+++ b/web/src/scss/main.scss
@@ -123,7 +123,7 @@ header {
 	width: 100%;
 	top: 0;
 	left: 0;
-	z-index: 100;
+	z-index: 9999;
 
 	.pixie a {
 		background-position: -7px -600px;
